--- a/task-03.html
+++ b/task-03.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Задание 3</title>
+    <link rel="stylesheet" href="/css/style.css" />
     <style>
       body {
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -18,7 +19,7 @@
   <body>
     <p><a href="index.html">На главную</a></p>
 
-    <ul id="gallery"></ul>
+    <ul class="gsllery-list" id="gallery"></ul>
 
     <script src="js/task-03.js" type="module"></script>
   </body>
